Apply h1 and h2 style from 'KDE 中文星球' to its articles, limit the size of images in articles to prevent overflow

--- a/less/index.less
+++ b/less/index.less
@@ -22,6 +22,21 @@
 				-ms-user-select: none;
 			}
 		}
+		article {
+			h1 {
+				font-size: 2em;
+			}
+			h2 {
+				font-size: 1.5em;
+				background-color: #FFF;
+				color: #0068c6;
+				padding: 0;
+				border-bottom: 0px;
+			}
+			img {
+				max-width: 60%;
+			}
+		}
 	}
 	.logbot { border-radius: 0;
 		iframe {
